--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-css-burger",
   "version": "0.2.0",
-  "description":
-    "Lightweight, dynamic, zero-dependency (and very tasty) burger for React.",
+  "description": "Lightweight, dynamic, zero-dependency (and very tasty) burger for React.",
   "author": "Matthew Bliffert",
   "license": "MIT",
   "repository": "mattvox/react-css-burger",
@@ -74,5 +73,7 @@
     "rollup-plugin-postcss": "^1.1.0",
     "rollup-plugin-url": "^1.3.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
